--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             
               <ul>
               <li><label>Name:</label>MOHINI DIPAK RONGHE</li>
+              <li><label>Age:</label>23</li>
               <li><label>Education:</label>BE Computer Science and Engineering</li>
               <li><label>Email:</label>mohinironghe@gmail.com</li>
               <li><label>Phone</label>9637633177</li>
