--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     </div>
     <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#chat">chat</a> -->
     <!-- Trigger/Open The Modal -->
-    <!-- <div class="chatbtn">
-        <button id="myBtn"><img src="./assets/chat-speech-bubbles.png">
+    <div class="chatbtn">
+        <button id="myBtn"><img src="../portfolio/assets/chat-speech-bubbles.png">
         </button>
           
-        </div> -->
+        </div>
   </header>
 
   <!-- About Section -->
@@ -98,12 +98,13 @@
             
               <ul>
               <li><label>Name:</label>MOHINI DIPAK RONGHE</li>
+              <li><label>Age:</label>23</li>
               <li><label>Education:</label>BE Computer Science and Engineering</li>
               <li><label>Email:</label>mohinironghe@gmail.com</li>
               <li><label>Phone</label>9637633177</li>
             </ul>
             <!-- <a class="btn btn-success btn-xl js-scroll-trigger" href="#">Resume</a> -->
-            <a class="btn btn-primary btn-xl" href="./assets/resume.pdf" download><i class="fa fa-download"></i> Download</a>
+            <a class="btn btn-primary btn-xl" href="../startbootstrap-creative-gh-pages/assets/resume.pdf" download><i class="fa fa-download"></i> Download</a>
           </div>
         </div>
       </div>
@@ -117,7 +118,7 @@
       <div class="row no-gutters">
         <div class="col-lg-2 col-sm-4">
           <div class="card">
-            <div class="poster"><img src="./assets/project1.png"></div>
+            <div class="poster"><img src="../startbootstrap-creative-gh-pages/assets/project1.png"></div>
             <div class="details">
               <h4><span>SiteName:</span> <a href="https://www.munchpaksnackright.in/" target="_blank">https://www.munchpaksnackright.in/</a>
               </h4>
@@ -276,7 +277,7 @@
   </footer>
 
 
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
   <script>
     (function(){
       var element =function(id){
@@ -368,7 +369,7 @@ window.onclick = function(event) {
 
 
    
-  </script> -->
+  </script>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
